--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,4 +6,6 @@ html lang="en"
         title The Handmade Forum
     body
     h1 The Handmade Forum
+    nav 
+        a href="/projects" Projects
     ==yield 
