--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,4 +8,5 @@ html lang="en"
     h1 The Handmade Forum
     nav 
         a href="/projects" Projects
+        a href="/projects/new" Create new project 
     ==yield 
