--- a/views/projects/new.slim
+++ b/views/projects/new.slim
@@ -1,5 +1,11 @@
 form action="/projects/new" method="post" 
     input type="text" name="project_name" placeholder="Project Name"
-    input type="text" name="craft_id" placeholder="Id of the craft type"
+    select name="craft_type"
+        - @craft_type.each do |crafttype|
+            option value="crafttype" crafttype['name']
+            - p crafttype["name"]
     input type="text" name="user_id" placeholder="You are user..."
     input type="submit" value="Create new project"
+
+//select name="craft_type" 
+   // input type="text" name="craft_id" placeholder="Id of the craft type"
