--- a/views/projects/index.slim
+++ b/views/projects/index.slim
@@ -4,5 +4,6 @@ ol
   - @result.each do |project|
     li 
       a href="projects/#{project['project_id']}"  #{project["name"]}
+      a href="projects/#{project['project_id']}/edit" Add/change Project Information
       form action="projects/#{project['project_id']}/delete" method="post"
-        input type="submit" value="Delete"
+        input type="submit" value="Delete"  
