--- a/views/projects/show.slim
+++ b/views/projects/show.slim
@@ -1,1 +1,8 @@
 h2 =  @result["name"]
+h3 Craft Type: #{@craft_type["name"]}
+h3 Project Attributes: 
+ol 
+   - @attributes.each do |attribute|
+     li #{attribute["name"]}
+h3 Description 
+p #{@result["description"]}
