--- a/views/register.slim
+++ b/views/register.slim
@@ -1,7 +1,7 @@
 section#register_page 
     article#register_section
         h2.section_header Create your account!
-        form action="users/new" method="post"
+        form action="register" method="post"
             input type="text" name="username" placeholder="Username"
             input type="password" name="password" placeholder="Password"
             input type="password" name="password_confirm" placeholder="Confirm password"
