--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -128,7 +128,7 @@ footer {
     height: 100%;
 }
 
-footer a {
+footer a, #project_info ol, #project_info p, .notice {
     font-family: 'Oxygen', sans-serif;
     text-decoration: none;
     color: black;
@@ -163,7 +163,7 @@ footer a:hover {
     cursor: pointer;
 }
 
-.text_header, .project a {
+.text_header, .project a, .form_label {
     margin: 5px;
     font-family: 'Domine', serif;
     font-size: 1.2rem;
@@ -194,7 +194,7 @@ footer a:hover {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
-#login input[type=text], #login input[type=password], #register_section input[type=text], #register_section input[type=password] {
+.form_text, #description {
     width: 90%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -203,7 +203,7 @@ footer a:hover {
     font-size: 1rem;
 }
 
-#login input[type=submit], #register_section input[type=submit], .project input[type=submit] {
+.form_submit {
     width: 90%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -212,7 +212,7 @@ footer a:hover {
     background: rgb(250, 249, 248);
 }
 
-#login input[type=submit]:hover, #register_section input[type=submit]:hover, .project input[type=submit]:hover {
+.form_submit:hover {
     cursor: pointer;
     background: rgb(242, 239, 235);
 }
@@ -241,7 +241,7 @@ footer a:hover {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
-#project_section {
+#project_section, #show_project, #edit_project, #add_info, #new_project {
     background-color: rgb(169, 176, 184);
     display: flex;
     flex-direction: column;
@@ -263,6 +263,32 @@ footer a:hover {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
+#project_info, #edit_form, #add_form, #new_form {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    min-height: 300px;
+    max-height: 100vh;
+    padding: 20px;
+    width: 60%;
+    margin: 10px;
+    background: rgb(242, 239, 235);
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+}
+
+#project_info * {
+    margin: 10px;
+}
+
+#project_info ol {
+    list-style: none;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 .project a {
     color: black;
     text-decoration: none;
@@ -272,4 +298,21 @@ footer a:hover {
     width: 100%;
     margin: 0;
     padding: 6px 20px;
+}
+
+#edit_form form, #add_info form, #new_form form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 90%;
+    width: 100%;
+}
+
+.notice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5%;
+
 }
