--- a/views/login.slim
+++ b/views/login.slim
@@ -2,9 +2,9 @@ section#login_page
     article#login
         h2.section_header Sign in to your account!
         form action="login" method="post"
-            input type="text" name="username" placeholder="Enter username"
-            input type="password" name="password" placeholder="Enter password"
-            input type="submit" value="Login"
+            input.form_text type="text" name="username" placeholder="Enter username"
+            input.form_text type="password" name="password" placeholder="Enter password"
+            input.form_submit type="submit" value="Login"
     article#register
         h2.section_header No account yet?
         #register_box
