--- a/views/register.slim
+++ b/views/register.slim
@@ -2,10 +2,10 @@ section#register_page
     article#register_section
         h2.section_header Create your account!
         form action="register" method="post"
-            input type="text" name="username" placeholder="Username"
-            input type="password" name="password" placeholder="Password"
-            input type="password" name="password_confirm" placeholder="Confirm password"
-            input type="submit" value="Register"
+            input.form_text type="text" name="username" placeholder="Username" 
+            input.form_text type="password" name="password" placeholder="Password"
+            input.form_text type="password" name="password_confirm" placeholder="Confirm password"
+            input.form_submit type="submit" value="Register"
     article#login_section 
         h2.section_header Already have an account?
         #login_box 
