--- a/views/projects/addinfo.slim
+++ b/views/projects/addinfo.slim
@@ -1,10 +1,14 @@
-form action="/projects/#{@result['project_id']}/addinfo" method="post"
-    input type="hidden" name="craft_id" value="#{@result['craft_type_id']}"
-    select name="attribute_1"
-        - @attributes.each do |attribute|
-            option value="#{attribute['name']}" #{attribute["name"]}
-    select name="attribute_2"
-        - @attributes.each do |attribute|
-            option value="#{attribute['name']}" #{attribute["name"]}
-    input type="text" name="description" placeholder="Add description"
-    input type="submit" value="Add info!"
+section#add_info
+    article#add_form    
+        form action="/projects/#{@result['project_id']}/addinfo" method="post"
+            input type="hidden" name="craft_id" value="#{@result['craft_type_id']}"
+            label for="attribute" class="form_label" Choose New Attributes
+            select.form_text name="attribute_1"
+                - @attributes.each do |attribute|
+                    option.form_text value="#{attribute['name']}" #{attribute["name"]}
+            select.form_text name="attribute_2"
+                - @attributes.each do |attribute|
+                    option.form_text value="#{attribute['name']}" #{attribute["name"]}
+            label for="description" class="form_label" Change Description
+            input#description type="text" name="description" placeholder="Add description"
+            input.form_submit type="submit" value="Add info!"
