--- a/views/projects/new.slim
+++ b/views/projects/new.slim
@@ -1,5 +1,5 @@
 section#new_project
-    article#new_form    
+    article.new_form    
         form action="/projects/new" method="post"
             label for="project_name" class="form_label" Choose Project Name 
             input.form_text type="text" name="project_name" placeholder="Project Name"
