--- a/views/layout.slim
+++ b/views/layout.slim
@@ -22,6 +22,8 @@ html lang="en"
                         li
                             a href="/projects/new" Create new project
                     - if session[:admin] != 0 && session[:id] != nil
+                        li
+                            a href="/admin/craft_attribute/new" Craft types and attributes 
                         li  
                             a href="/admin/users" View users 
                     - if session[:id] == nil
